[package]
name = "web_splats"
version = "0.1.0"
edition = "2021"
authors = ["Simon Niedermayr", "Josef Stumpfegger"]
description = "3D Gaussian Splatting Viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "24.0.0"}
winit = "0.30.5"
cgmath = { version = "0.18.0", features = [
    "bytemuck",
], git = 'https://github.com/rustgd/cgmath' }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
ply-rs = "0.1.3"
byteorder = "1.5.0"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
num-traits = "0.2.19"
half = { version = "2.4.1", features = ["bytemuck", "num-traits"] }
log = "0.4.22"
rayon = "1.9.0"
image = "0.25"
indicatif = "0.17.8"
ssh2 = {version="0.9.5",optional = true}
url = {version="2.5"}
ehttp = {version="0.5.0",features = ["native-async"],optional = true}

egui = {version = "0.31"}
egui-wgpu = {version = "0.31"}
egui-winit = { version = "0.31", features = [], default-features = false  }
egui_plot = {version = "0.31"}

rand = "0.8.5"
npyz = { version = "0.8.3", features = ["npz", "half"], optional = true }
futures-intrusive = "0.5.0"
splines = { version = "4.3.1", features = [
    "cgmath",
], git = "https://github.com/KeKsBoTer/splines" }

[dev-dependencies]
wasm-bindgen-cli = "0.2.93"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "viewer"

[[bin]]
name = "video"
required-features = ["video"]

[features]
npz = ["dep:npyz"]
video = []
ssh = ["dep:ssh2"]
http = ["dep:ehttp"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.42"
console_log = "1"
log = "0.4"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.69" }

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[patch.crates-io]
# use custom wgpu implementation with fragment shader interlock
wgpu = { version = "24.0.0",path="/home/niedermayr/Projects/wgpu/wgpu"}