[package]
name = "web_splats"
version = "0.1.0"
edition = "2021"
authors = ["Simon Niedermayr", "Josef Stumpfegger"]
description = "3D Gaussian Splatting Viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "25.0" }
winit = "0.30.12"
cgmath = { version = "0.18.0", features = [
    "bytemuck",
], git = 'https://github.com/rustgd/cgmath' }
env_logger = "0.11"
clap = { version = "4.5.45", features = ["derive"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
anyhow = "1.0.99"
ply-rs = "0.1.3"
byteorder = "1.5.0"
serde_json = "1.0.142"
serde = { version = "1.0.188", features = ["derive"] }
num-traits = "0.2.19"
half = { version = "2.6.0", features = ["bytemuck", "num-traits"] }
log = "0.4.27"
rayon = "1.11.0"
image = "0.25.6"
indicatif = "0.18.0"


egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = { version = "0.32.0", features = [], default-features = false }
egui_plot = "0.33.0"
egui_dnd = "0.13.0"

rand = "0.9.2"
npyz = { version = "0.8.4", features = ["npz", "half"], optional = true }
futures-intrusive = "0.5.0"
splines = { features = [
    "cgmath",
], git = "https://github.com/KeKsBoTer/splines" }

[dev-dependencies]
wasm-bindgen-cli = "0.2.100"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "viewer"

[[bin]]
name = "video"
required-features = ["video"]

[features]
npz = ["dep:npyz"]
video = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4.0", features = ["macro"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.42"
console_log = "1"
log = "0.4"
web-time = "1.1.0"
web-sys = { version = "0.3.69" }

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
